infra-helm/cicd/argocd/argocd-ingress-app.yaml
# infra-helm/network/tailscale/tailscale-ingress-app.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailscale-ingress
  namespace: argocd
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts:
    - argocd
---


# 트러블슈팅 기록
# 1. Tailscale LoadBalancer Servcie로는 443 포트(HTTPS) 서비스 할 수 없음
# 해결 : Tailscale Ingress 사용
#
# 2. argocd 는 ssl-passthrough(ingress를 지나 argocd-server 까지 ssl이 필요)가 필요하나 tailscale에서는 불가능
# 해결 : argocd-server를 insecure 모드로 재설치
#
# 참고 문서
# https://tailscale.com/docs/features/kubernetes-operator/how-to/cluster-ingress#exposing-cluster-workloads-using-a-kubernetes-ingress
